--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines" : { 
+    "npm" : ">=8.3.1",
+    "node" : ">=16.14.0"
   }
 }
